<resources>
    <string name="app_name">LifeCityAndroid</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_emoties">Emoties</string>
    <string name="title_talenten">Talenten</string>
    <string name="title_hulpbronnen">Hulpbronnen</string>
    <string name="title_levenslijn">Levenslijn</string>
    <string name="title_doelen">Doelen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="maak_een_account">maak een account</string>
    <string name="voornaam">voornaam</string>
    <string name="achternaam">achternaam</string>
    <string name="email">email</string>
    <string name="registreer">registreer</string>
    <string name="heeft_u_al_een_account">heeft u al een account?</string>
    <string name="log_dan_in">log in</string>
    <string name="paswoord">paswoord</string>
    <string name="bevestig_paswoord">bevestig paswoord</string>
    <string name="welkom">welkom</string>
    <string name="naarApp">naar app</string>
</resources>