<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_emoties"
        android:icon="@drawable/ic_emoties"
        android:title="@string/title_emoties" />

    <item
        android:id="@+id/navigation_talenten"
        android:icon="@drawable/ic_talenten"
        android:title="@string/title_talenten" />

    <item
        android:id="@+id/navigation_hulpbronnen"
        android:icon="@drawable/ic_hulpbronnen"
        android:title="@string/title_hulpbronnen" />

    <item
        android:id="@+id/navigation_levenslijn"
        android:icon="@drawable/ic_levenslijn"
        android:title="@string/title_levenslijn" />

    <item
        android:id="@+id/navigation_doelen"
        android:icon="@drawable/ic_doelen"
        android:title="@string/title_doelen" />

</menu>