<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.lifecityandroid.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.lifecityandroid.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.lifecityandroid.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_emoties"
        android:name="com.example.lifecityandroid.ui.emoties.EmotiesFragment"
        android:label="@string/title_emoties"
        tools:layout="@layout/fragment_emoties" >
        <action
            android:id="@+id/action_emoties_to_talenten"
            app:destination="@id/navigation_talenten" />
    </fragment>

    <fragment
        android:id="@+id/navigation_talenten"
        android:name="com.example.lifecityandroid.ui.talenten.TalentenFragment"
        android:label="@string/title_talenten"
        tools:layout="@layout/fragment_talenten" >
        <action
            android:id="@+id/action_talenten_to_emoties"
            app:destination="@id/navigation_emoties" />
    </fragment>

</navigation>